--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY . ./
-RUN dotnet restore
-RUN dotnet publish -c Release -o /app/out
+RUN dotnet restore ./Api/Api.csproj
+RUN dotnet publish ./Api/Api.csproj -c Release -o /app/out
 
 # --- Runtime stage ---
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
